# SeidarT

./: .gitignore  CMakeLists.txt  Dockerfile  README.rst  SeidarT-DebianServerVMDKClone.vbox  build_docs.sh  cmake_install.cmake  documentation-environment.yml  install.sh  install.tar.xz  install_log.txt  meson.build  mod_build.sh  new_setup_development.py  pypi_tokens  pyproject.toml  seidart-environment-macos.yml  seidart-environment.yml  seidart-installer.sh  setup.py  test_seismic.py
.github/legacy/: build-linux-wheels.yml
.github/workflow_development/: build-docs.yml  build-linux-wheels.yml
.github/workflows/: build-docs.yml  build-linux-wheels.yml  build-mac-wheels.yml  build-wheels.yml
_skbuild/linux-x86_64-3.11/cmake-build/: .ninja_log  CMakeCache.txt  CMakeSpec.json  build.ninja  cmake_install.cmake  install_manifest.txt
_skbuild/linux-x86_64-3.11/cmake-install/src/seidart/routines/: __init__.py  prjrun.py
_skbuild/linux-x86_64-3.11/setuptools/lib.linux-x86_64-cpython-311/seidart/: __init__.py
_skbuild/linux-x86_64-3.11/setuptools/lib.linux-x86_64-cpython-311/seidart/routines/: arraybuild.py  sourcefunction.py
_skbuild/linux-x86_64-3.11/setuptools/lib.linux-x86_64-cpython-311/seidart/simulations/: multioffset.py
_skbuild/linux-x86_64-3.11/setuptools/lib.linux-x86_64-cpython-311/seidart/visualization/: im2anim.py  imgen.py
docs/: index.html
docs/source/: README.rst  RECIPES.rst  ROUTINES.md  ROUTINES.rst  SIMULATIONS.md  VISUALIZATION.md  anisotropic_materials.rst  arraybuild.rst  build-docs.rst  changelog.rst  collaboration.rst  common_midpoint.rst  common_offset.rst  conf.py  examples.rst  getting_started.rst  index.rst  initialize_project.rst  modules.rst  png-creation.rst  project_file.rst  routines.arraybuild.rst  routines.materials.rst  routines.prjrun.rst  seidart.fortran.rst  seidart.recipes.co_test.rst  seidart.recipes.rst  seidart.routines.arraybuild.rst  seidart.routines.classes.rst  seidart.routines.materials.rst  seidart.routines.orientation_tensor.rst  seidart.routines.prjbuild.rst  seidart.routines.rst  seidart.routines.sourcefunction.rst  seidart.routines.volumebuilder.rst  seidart.rst  seidart.simulations.apres.rst  seidart.simulations.common_offset.rst  seidart.simulations.rst  seidart.visualization.implot.rst  (+4 more)
install/: full_install.bat  full_install.sh  seidart-environment.yml  simple_model.tar.xz
legacy/: CMakeLists.txt  Makefile  build-wheels.sh  cpmlcompute.py  cpmlwrite.py  emcpml.py  imvector.py  install_v2.sh  install_v3.sh  meson.build  meson.build.083024  noconda_install.sh  post_install.py  pyproject.toml.100224  pyproject_082824.toml  pyproject_112124.toml  recipes.rst  seidart.recipes.rst  setup.py  setup_082924.py  test_1.prj  vectoranim.py
legacy/fortran/: electromagfdtd.f95  emFDTD25D.f95  emFDTD25D_2023.f95  emFDTD2D.f95  emFDTD2D_2023.f95  emFDTD2Dc_2023.f95  readwrite_routines.f95  seismicFDTD25D.f95  seismicFDTD25D_2023.f95  seismicFDTD2D.f95  seismicFDTD2D_2023.f95  seismicFDTD2Dc_2023.f95  seismicfdtd.f95
legacy/v0.0.1/source/: seismicFDTD2D.f95
legacy/v0.0.2/: install.sh  noconda_install.sh
legacy/v0.0.2/exe/: prjrun.py  sourcefunction.py  xyzbuild.py
legacy/v0.0.2/fdtd/: emFDTD25D.f95  emFDTD2D.f95  seismicFDTD25D.f95  seismicFDTD2D.f95  seismicfdtd2d.mod
legacy/v0.0.2/materials/: definitions.py  emcpml.py  material_functions.py  orientsynth.mod  seiscpml.py
legacy/v0.0.2/survey_wrappers/: common_offset
legacy/v0.0.2/vis/: arraybuild.py  imgen.py  rcxdisplay.py  rcxgen.py  slice25d.py  vtkbuild.py
mod_dir/: cpmlfdtd.mod
seidart/routines/: definitions.py
seidart/visualization/: im2anim.py
src/seidart.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/seidart/binaries/: seidartfdtd-darwin-arm64  seidartfdtd-darwin-x86_64  seidartfdtd-linux-x86_64
src/seidart/fortran/: cpmlfdtd.f95  cpmlfdtd.f95.f2py_bindings  orientsynth.f95
src/seidart/recipes/: co_test.py
src/seidart/recipes/glacial_water/: glacial_water1.prj  receivers.xyz  single_shot.py
src/seidart/recipes/masw/: masw.prj  masw.py  receivers.xyz
src/seidart/recipes/simple_model/: common_offset_receivers.xyz  complex_wavefield.prj  complex_wavefield.py  receivers.xyz  sources.xyz
src/seidart/routines/: __init__.py  arraybuild.py  classes.py  definitions.py  fabricsynth.py  materials.py  prjbuild.py  prjrun.py  sourcefunction.py  volumebuilder.py
src/seidart/simulations/: common_offset.py  multioffset.py
src/seidart/visualization/: im2anim.py  imgen.py  implot.py  slice25d.py  vtkbuild.py
wheelhouse/: seidart-0.1.1-cp311-cp311-manylinux_2_17_i686.manylinux2014_i686.whl  seidart-0.1.1-cp311-cp311-manylinux_2_24_x86_64.whl  seidart-0.1.1-cp311-cp311-musllinux_1_1_i686.whl  seidart-0.1.1-cp311-cp311-musllinux_1_1_x86_64.whl  seidart-0.1.1-cp311-cp311-win_amd64.whl  seidart-1.1.0-cp311-cp311-manylinux_2_17_i686.manylinux2014_i686.whl  seidart-1.1.0-cp311-cp311-manylinux_2_24_x86_64.whl  seidart-1.1.0-cp311-cp311-musllinux_1_1_i686.whl  seidart-1.1.0-cp311-cp311-musllinux_1_1_x86_64.whl  seidart-1.1.0-cp311-cp311-win_amd64.whl  seidart-1.5.0-cp311-cp311-manylinux_2_17_i686.manylinux2014_i686.whl  seidart-1.5.0-cp311-cp311-manylinux_2_24_x86_64.whl  seidart-1.5.0-cp311-cp311-musllinux_1_2_i686.whl  seidart-1.5.0-cp311-cp311-musllinux_1_2_x86_64.whl  seidart-1.5.0-cp311-cp311-win_amd64.whl  seidart-1.6.0-cp311-cp311-manylinux_2_17_i686.manylinux2014_i686.whl  seidart-1.6.0-cp311-cp311-manylinux_2_24_x86_64.whl  seidart-1.6.0-cp311-cp311-musllinux_1_2_i686.whl  seidart-1.6.0-cp311-cp311-musllinux_1_2_x86_64.whl  seidart-1.6.0-cp311-cp311-win_amd64.whl
