[build-system]
requires = ["setuptools","wheel","numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "seidart"
version = "2.0.0"
license = {file = "LICENSE.txt"}
description = "SeidarT is a 2 and 2.5d seismic and electromagnetic modeling suite."
requires-python = ">=3.11"
readme = "README.rst"
authors = [
    { name = "Steven Bernsen", email = "steven.bernsen@maine.edu"},
    { name = "Christopher Gerbi", email = "christopher.gerbi@maine.edu"},
]
maintainers = [
    { name = "Steven Bernsen", email = "steven.bernsen@maine.edu"},
    { name = "Christopher Gerbi", email = "christopher.gerbi@maine.edu"},
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "mplstereonet",
    "pyevtk",
    "glob2",
    "dill"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Development Status :: 4 - Beta",
]

[project.entry-points.console_scripts]
prjbuild = "seidart.routines.prjbuild:main"
prjrun = "seidart.routines.prjrun:main"
arraybuild = "seidart.routines.arraybuild:main"
sourcefunction = "seidart.routines.sourcefunction:main"
rcxdisplay = "seidart.visualization.rcxdisplay:main"
im2anim = "seidart.visualization.im2anim:build_animation"
orientsynth = "seidart.fortran.orientsynth"

# Optionals
[project.urls]
homepage = "https://github.com/UMainedynamics/SeidarT"
documentation = "https://umainedynamics.github.io/SeidarT/index.html"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "seidart",
    "seidart.fortran", 
    "seidart.routines", 
    "seidart.simulations", 
    "seidart.visualization"
]





